Fix date time picker layout problem in Safari

--- a/web-app/src/ng1/css/style.scss
+++ b/web-app/src/ng1/css/style.scss
@@ -174,6 +174,15 @@ a:hover, a:focus {
   animation: spinccw 2s infinite linear;
 }
 
+.date-time-picker {
+  display: flex;
+  justify-content: space-between;
+}
+
+.date-picker-input {
+  margin-right: 8px;
+}
+
 .filter-dropdown {
   width: 350px;
 }
